# Hate_Speech_Detection

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/agents/: action_agent.py  audio_processing.py  error_handler.py  hate_speech_agent.py  reasoning_agent.py  retriever_agent.py
backend/api/: analysis_service.py  api_main.py
backend/schemas/: text_schema.py
backend/utils/: embedding_utils.py  logging_utils.py  qdrant_store.py
data/policy_data/: google_policy.txt  ipc_section.txt  meta_policy.txt  reddit_policy.txt  twitter_policy.txt  us_hate_law_policy.txt
frontend/: api_client.py  app.py
frontend/pages/: audio_analysis.py  history.py  text_analysis.py
tests/: conftest.py  test_action_agent.py  test_error_handler.py  test_hate_speech_agent.py  test_reasoning_agent.py  test_retriever_agent.py
