[project]
name = "hatespeechproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.104.0",
    "ffmpeg>=1.4",
    "langchain[openai]>=0.3.25",
    "numpy>=1.24.0",
    "openai>=1.3.0",
    "pandas>=2.0.0",
    "plotly>=6.1.2",
    "pydantic>=2.0.0",
    "pydub>=0.25.1",
    "pytest>=8.4.0",
    "python-multipart>=0.0.6",
    "qdrant-client>=1.6.0",
    "sentence-transformers>=2.2.0",
    "speechrecognition>=3.14.3",
    "streamlit>=1.29.0",
    "uvicorn>=0.24.0",
]
